updated pages and styles

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,76 +2,148 @@
 	font-family: Ubuntu;
 	src: url(Ubuntu.ttf);
 }
+@font-face {
+	font-family: Quicksand;
+	src: url(Quicksand-Regular.ttf);
+}
 body,html {
 	width: 100%;
-	height: 100%;
+	/*height: 100%;*/
 }
 body {
 	zoom: 1;
-	font-family: Ubuntu, Helvetica, Arial, sans-serif;
-	color: #333;
+	/*font-family: Ubuntu, Helvetica, Arial, sans-serif;*/
+	font-family: 'Quicksand', sans-serif;
+	/*color: #808285;*/
+	color: rgb(78 87 104);
 	margin: 0;
 	min-width: 320px;
-	/*background-color: rgb(255,255,255);*/
-	background-color: rgb(251,215,215);
+	background-color: rgb(255,255,255);
 	background-size: 100% auto;
-	text-align: center;
 }
 div {
 	display: block;
 }
-/*#content {
-	padding-top: 20px;
-}*/
 #header {
-	padding-bottom: 1em;
-/*	margin-bottom: 1.5rem;*/
+	/*padding-bottom: 1em;*/
+	display: flex;
+	flex-wrap: wrap;
+	/*border-bottom: 1px solid rgb(232,232,232)!important;*/
 }
+/*p.headertitle {
+	margin: 0 1rem 1rem;
+}*/
 /*#header>a,#header>p {
 	padding-left: 1em;
 	padding-right: 0;
 	display: initial;
 }*/
+#header>ul {
+	/*border-bottom: 1px solid rgb(232,232,232)!important;*/
+	padding-left: 1%;
+	padding-right: 1%;
+	text-align: center;
+	margin-left: auto;
+	list-style: none;
+}
+img.headerimg {
+	margin-top: 5px;
+	margin-left: 5px;
+}
+#footer {
+	background-color: transparent;
+	background-image: linear-gradient(180deg,rgba(78,87,104,.1) 0%,#f7f7f8 100%);
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 2rem;
+}
+#footer>p {
+	padding: 0 2%;
+}
+.blacktext {
+	color: #000;
+}
+a.button {
+	font-size: 14px;
+	font-weight: 600;
+	text-transform: uppercase;
+	letter-spacing: 1.8px;
+	fill: #fff;
+	color: #fff;
+	background-color: rgb(186,53,253);
+	border-radius: 30px 30px 30px 30px;
+	padding: 17px 42px 17px 40px;
+	-webkit-transition: all .3s;
+	-o-transition: all .3s;
+	transition: all .3s;
+}
+a.button:hover,a.button:focus {
+	color: #fff;
+	background-color: rgba(206,114,253,.59);
+}
+#page {
+	max-width: 650px;
+	margin: 0 auto;
+	padding: 0 2%;
+}
 li.headerlink {
 	display: inline-block;
+	margin-left: 1rem;
 	margin-right: 1rem;
 	margin-bottom: 1rem;
+}
+.flextext {
+	display: flex;
+	/*flex-direction: row;
+	flex-wrap: nowrap;*/
 }
 a {
 	color: rgba(188,119,0,1);
 	text-decoration: none;
 }
+a[aria-current] {
+	color: rgb(0,0,0)!important;
+}
 a:hover {
 	color: rgba(222,141,0,1);
 	text-decoration: none;
 }
+#page>h2 {
+	padding-left: 1%;
+}
+#page>p {
+	padding-left: 2%;
+}
 h1,h2,h3,h4,h5,h6 {
 	margin-top: 0;
 	margin-left: 0;
-	margin-bottom: 0;
 	font-weight: bold;
 }
 h1,h2,h3,h4,h5,h6,p {
 	margin-bottom: 10px;
 }
 p {
-	padding-left: 1%;
-	padding-right: 1%;
+	/*padding-left: 1%;
+	padding-right: 1%;*/
 	font-size: 1em;
+	margin-top: 5px;
 }
 h1 {
 	font-size: 1.8em;
+	margin-bottom: 20px;
 }
 h2 {
-	font-size: 1.4em;
+	font-size: 1.2em;
 }
 h3 {
 	font-size: 1.0em;
+}
+hr {
+	border-top: 1px dashed rgb(226,226,226)!important;
+	border-bottom: 0px;
 }
 ::selection {
 	color: #ff93fb;
 	background-color: #000;
 }
-/*h1.headertext {
-	text-align: center;
-}*/
