--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@
 }
 body,html {
 	width: 100%;
-	/*height: 100%;*/
+	height: 100%;
 }
 body {
 	zoom: 1;
@@ -24,11 +24,17 @@ body {
 div {
 	display: block;
 }
+#boxcontent {
+	display: flex;
+	flex-flow: column;
+	height: 100vh;
+}
 #header {
 	/*padding-bottom: 1em;*/
 	display: flex;
 	flex-wrap: wrap;
 	/*border-bottom: 1px solid rgb(232,232,232)!important;*/
+	flex: 0 1 auto;
 }
 /*p.headertitle {
 	margin: 0 1rem 1rem;
@@ -50,13 +56,20 @@ img.headerimg {
 	margin-top: 5px;
 	margin-left: 5px;
 }
+img.skillLogo {
+	float: right;
+	padding-right: 1em;
+}
 #footer {
 	background-color: transparent;
 	background-image: linear-gradient(180deg,rgba(78,87,104,.1) 0%,#f7f7f8 100%);
-	position: absolute;
+	/*position: absolute;*/
+	/*display: block;
 	bottom: 0;
-	width: 100%;
+	width: 100%;*/
+	/*height: 5vh;*/
 	height: 2rem;
+	flex: 0 1 40px;
 }
 #footer>p {
 	padding: 0 2%;
@@ -83,9 +96,9 @@ a.button:hover,a.button:focus {
 	background-color: rgba(206,114,253,.59);
 }
 #page {
-	max-width: 650px;
-	margin: 0 auto;
-	padding: 0 2%;
+	width: 50%;
+	margin: auto;
+	flex: 1 1 auto;
 }
 li.headerlink {
 	display: inline-block;
@@ -139,6 +152,9 @@ h2 {
 h3 {
 	font-size: 1.0em;
 }
+.centered {
+	text-align: center;
+}
 hr {
 	border-top: 1px dashed rgb(226,226,226)!important;
 	border-bottom: 0px;
@@ -146,4 +162,152 @@ hr {
 ::selection {
 	color: #ff93fb;
 	background-color: #000;
+}
+.grid {
+	display: grid;
+	/*grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));*/
+	/* This is better for small screens, once min() is better supported */
+	/* grid-template-columns: repeat(auto-fill, minmax(min(200px, 100%), 1fr)); */
+	/*grid-template-columns: repeat(auto-fill, minmax(min(200px, 100%), 0));*/
+	grid-template-columns: repeat(auto-fit, minmax(min(200px, 100%), 0));
+	justify-content: center;
+	/*gap: 1rem;*/
+	gap: 2.3vw;
+}
+table {
+	float: left;
+	margin-left: 9vw;
+	border-collapse: collapse;
+	-webkit-border-horizontal-spacing: 0px;
+	-webkit-border-vertical-spacing: 0px;
+}
+h2.tb {
+	display: table-cell;
+	vertical-align: bottom;
+	text-align: center;
+	height: 100px;
+	width: 200px;
+	/*font-size: 1vw;*/
+	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	font-weight: bold;
+	color: #fff;
+	margin: 0;
+	padding: 0;
+}
+h3.tb {
+	/*font-size: .75vw;*/
+	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	font-weight: normal;
+	color: #fff;
+	margin: 0;
+	padding: 0;
+	text-align: center;
+	box-shadow: 0 -1px 1px #d9e5d6;
+}
+td,.td {
+	width: 200px;
+	height: 200px;
+	padding: 0;
+}
+.hidden {
+	width: 200px;
+	height: 200px;
+	display: block;
+	text-indent: -9999px;
+	position: absolute;
+}
+.captionyellow {
+	width: auto;
+	height: 200px;
+	opacity: 1;
+	overflow: hidden;
+	transition: all .6s ease; 
+	background: rgba(247, 179, 43, .8);
+}
+.captionred {
+	width: auto;
+	height: 200px;
+	opacity: 1;
+	overflow: hidden;
+	transition: all .6s ease; 
+	background: rgba(191, 78, 48, .8);
+}
+.captiongreen {
+	width: auto;
+	height: 200px;
+	opacity: 1;
+	overflow: hidden;
+	transition: all .6s ease; 
+	background: rgba(217, 229, 214, .8);
+}
+.captiondarkgrey {
+	width: auto;
+	height: 200px;
+	opacity: 1;
+	overflow: hidden;
+	transition: all .6s ease; 
+	background: rgba(68, 69, 69, .8);
+}
+.yellow {
+	background: #f7b32b;
+	box-shadow: .8vh .6vh rgba(247, 179, 43, .25);
+}
+.yellow:hover .captionyellow {
+	opacity: 0;
+}
+.red {
+	background: #bf4e30;
+	box-shadow: .8vh .6vh rgba(191, 78, 48, .25);
+	
+}
+.red:hover .captionred {
+	opacity: 0;
+}
+.green {
+	background: #d9e5d6;
+	box-shadow: .8vh .6vh rgba(217, 229, 214, .25);
+}
+.green:hover .captiongreen {
+	opacity: 0;
+}
+.darkgrey {
+	background: #444545;
+	box-shadow: .8vh .6vh rgba(68, 69, 69, .35);
+}
+.darkgrey:hover .captiondarkgrey {
+	opacity: 0;
+}
+.hgap {
+	width: 2.3vw;
+}
+.vgap {
+	height: 2.3vw;
+}
+.img_aragami {
+	background-image: url("../images/aragami2.webp"), url("../images/aragami2.png");
+	background-size: cover;
+}
+.img_belleonlyonly {
+	background-image: url("../images/belleonlyonly.jpg");
+	background-size: cover;
+}
+.img_googledrive {
+	background-image: url("../images/googledrive.png");
+	background-size: cover;
+}
+.img_lightyearloopers {
+	background-image: url("../images/lightyearloopers.png");
+	background-size: cover;
+}
+.img_mymothersgarden {
+	background-image: url("../images/mymothersgarden.png");
+	background-size: cover;
+}
+.img_onb {
+	background-image: url("../images/onb.jpg");
+	background-size: cover;
+}
+.img_thaishull {
+	background-image: url("../images/thaishull.png");
+	background-size: cover;
 }
