updated logos and text, removed unused page

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -46,7 +46,7 @@ img.headerimg {
 }
 img.skillLogo {
 	float: right;
-	padding-right: 1em;
+	/*padding-right: 1em;*/
 }
 #footer {
 	/*background-color: transparent;
